--- a/src/main/res/values-tg/strings.xml
+++ b/src/main/res/values-tg/strings.xml
@@ -220,139 +220,139 @@
     <string name="layer_lookuptable">маълумотнома</string>
     <string name="zoom_levels_to_show">Сатҳи миқёс, ки дар он қабат намоён аст</string>
     <string name="alpha">Шаффофӣ</string>
-    <string name="layerInfo">Информация о слое</string>
-    <string name="geom_type">Тип геометрии</string>
-    <string name="feature_count">Объектов: %1$d (%2$s)</string>
-    <string name="layer_local_path">Локальный путь: %1$s</string>
-    <string name="layer_remote_path">Удаленный: %1$s</string>
-    <string name="layer_has_form">с формой</string>
-    <string name="point">Точка</string>
-    <string name="multi_point">Мультиточка</string>
-    <string name="linestring">Линия</string>
-    <string name="multi_linestring">Мультилиния</string>
+    <string name="layerInfo">Маълумот дар бораи қабат</string>
+    <string name="geom_type">Навъи геометрия</string>
+    <string name="feature_count">адад: %1$d (%2$s)</string>
+    <string name="layer_local_path">Роҳи маҳаллӣ: %1$s</string>
+    <string name="layer_remote_path">Нобудшуда: %1$s</string>
+    <string name="layer_has_form">бо шакл</string>
+    <string name="point">Нуқта</string>
+    <string name="multi_point">Чанд нуқта</string>
+    <string name="linestring">Хат</string>
+    <string name="multi_linestring">Чанд сатр</string>
     <string name="polygon">Полигон</string>
-    <string name="multi_polygon">Мультиполигон</string>
-    <string name="update_coordinates">Обновить</string>
-    <string name="background_task_started">Задача инициализации слоя запущена</string>
-    <string name="processing">Обработка</string>
-    <string name="error_unsupported_layer_type">Данный тип слоя не поддерживается</string>
-    <string name="value_not_from_list">Значение не из списка</string>
-    <string name="share_gpx_multiple">Как сохранить выбранные треки?</string>
-    <string name="share_gpx_separate">По отдельности</string>
-    <string name="share_gpx_together">В один файл</string>
-    <string name="action_edit">Редактировать</string>
-    <string name="track_list">Список</string>
-    <string name="location_disabled">Определение местоположения отключено</string>
-    <string name="location_disabled_msg">Приложение не может определить, где вы находитесь. Включите функцию \"Мое местоположение\".</string>
-    <string name="location_accuracy">Точность местоположения</string>
-    <string name="location_inaccuracy">Вы можете повысить точность местоположения, включив следующие функции:</string>
+    <string name="multi_polygon">Бисёркунҷа</string>
+    <string name="update_coordinates">Навгони</string>
+    <string name="background_task_started">Вазифаи оғозёбӣ дар қабат оғоз ёфт</string>
+    <string name="processing">Коркард кардан</string>
+    <string name="error_unsupported_layer_type">Ин навъи қабат дастгирӣ намешавад</string>
+    <string name="value_not_from_list">Арзиши номатлуб</string>
+    <string name="share_gpx_multiple">Трекҳои интихобшударо чӣ гуна бояд захира кард?</string>
+    <string name="share_gpx_separate">Алоҳида</string>
+    <string name="share_gpx_together">Дар як файл</string>
+    <string name="action_edit">Таҳрир кунед</string>
+    <string name="track_list">Рӯйхат</string>
+    <string name="location_disabled">Ҷойгиршавӣ ғайрифаъол аст</string>
+    <string name="location_disabled_msg">Барнома муайян карда наметавонад, ки шумо дар куҷоед. Функсияи \"Ҷойгиршавии ман\" -ро фаъол кунед.</string>
+    <string name="location_accuracy">Аниқии ҷойгоҳ</string>
+    <string name="location_inaccuracy">Шумо метавонед дақиқи ҷойгиршавиро тавассути фаъол сохтани хусусиятҳои зерин беҳтар созед:</string>
     <string name="location_gps">GPS</string>
-    <string name="location_network">По Wi-Fi и координатам сети</string>
-    <string name="title_edit_by_walk">Запись обходом</string>
-    <string name="new_tms">Новый</string>
-    <string name="most_frequently">Наиболее часто</string>
-    <string name="panel_hide">Не показывать панель</string>
-    <string name="panel_show">Показывать только вне редактирования</string>
-    <string name="panel_always">Показывать всегда</string>
-    <string name="location_hide">Не показывать текущее местоположение</string>
-    <string name="location_marker">Показывать только маркер</string>
-    <string name="location_both">Показывать маркер и радиус точности</string>
-    <string name="tms_no_cache">Без кэша</string>
+    <string name="location_network">Бо координатаҳои Wi-Fi ва шабака</string>
+    <string name="title_edit_by_walk">Сабтро убур кунед</string>
+    <string name="new_tms">Нав</string>
+    <string name="most_frequently">Аксар вақт</string>
+    <string name="panel_hide">Панелро нишон надиҳед</string>
+    <string name="panel_show">Нишон додани танҳо таҳрир</string>
+    <string name="panel_always">Ҳамеша нишон диҳад</string>
+    <string name="location_hide">Ҷойгиршавии ҳозираро нишон надиҳед</string>
+    <string name="location_marker">Танҳо нишонаро нишон диҳед</string>
+    <string name="location_both">Нишондиҳандаи нишонгузорӣ ва радиатсияи дақиқ</string>
+    <string name="tms_no_cache">Бе кеш</string>
     <string name="tms_1_screen">1 экран</string>
-    <string name="tms_2_screens">2 экрана (рекомендовано)</string>
+    <string name="tms_2_screens">2 экран (тавсия дода мешавад)</string>
     <string name="tms_3_screens">3 экрана</string>
-    <string name="light">Светлая</string>
-    <string name="dark">Тёмная</string>
-    <string name="simple_renderer">Обычный</string>
-    <string name="rule_renderer">По правилу</string>
-    <string name="rules">Правила</string>
-    <string name="default_style">Стиль по-умолчанию</string>
-    <string name="value">Значение</string>
-    <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
-    <string name="new_gis">Создать ГИС</string>
-    <string name="manual_ngw">Расширенные настройки</string>
-    <string name="instance_name">Имя ГИС</string>
-    <string name="ngw_from_my_nextgis">Еще нет своей Веб ГИС? Создайте на nextgis.com!</string>
-    <string name="guest">Гость</string>
-    <string name="field_not_filled">Некоторые поля пустые</string>
-    <string name="web_map">Веб карта</string>
-    <string name="renderer">Отрисовка</string>
-    <string name="preparing">Подготовка…</string>
-    <string name="export">Экспорт</string>
-    <string name="accurate_finish_sound">Уведомить о завершении</string>
-    <string name="no_features">В слое нет объектов </string>
+    <string name="light">Дурахшон</string>
+    <string name="dark">Ториктар</string>
+    <string name="simple_renderer">Одди</string>
+    <string name="rule_renderer">Аз рӯи қоида</string>
+    <string name="rules">Қоида</string>
+    <string name="default_style">Услуби пешфарз</string>
+    <string name="value">Арзиш</string>
+    <string name="replace_field_rule">Бо сабаби тағир ёфтани майдон барои қоида, ҳамаи қоидаҳои ҷорӣ тоза карда мешаванд. Шумо мутмаъин ҳастед?</string>
+    <string name="new_gis">Сохтани GIS</string>
+    <string name="manual_ngw">Танзисоти тақвият </string>
+    <string name="instance_name">Номи GIS</string>
+    <string name="ngw_from_my_nextgis">Шумо ҳоло ҳам Web GIS-и худ надоред? Эҷод дар nextgis.com!</string>
+    <string name="guest">меҳмон</string>
+    <string name="field_not_filled">Баъзе майдонҳо холӣ ҳастанд.</string>
+    <string name="web_map">Харитаи веб</string>
+    <string name="renderer">Тасвир</string>
+    <string name="preparing">Омӯзиш…</string>
+    <string name="export">Содирот</string>
+    <string name="accurate_finish_sound">Дар бораи анҷомдиҳӣ хабардор кунед</string>
+    <string name="no_features">Дар қабати объектҳо нест</string>
     <string name="discard">@string/cancel</string>
-    <string name="error_export_geojson">Невозможно создать конечный geojson</string>
-    <string name="attributes">Таблица объектов</string>
+    <string name="error_export_geojson">Эҷод ниҳоӣ ғайримумкин geojson/string>
+    <string name="attributes">Ҷадвали объектҳо</string>
     <string name="error_cache">Неверный кэш, перестройте в настройках слоя</string>
-    <string name="sync_disable">Отключить синхронизацию</string>
-    <string name="sync_enable">Включить синхронизацию</string>
-    <string name="ngw_account">Аккаунт - %1$s</string>
-    <string name="menu_send_to_ngw">Отправить в NextGIS</string>
-    <string name="sync_disabled">Синхронизация отключена</string>
-    <string name="sync_enable_error">Ошибка при включении синхронизации</string>
-    <string name="sync_enabled">Синхронизация включена</string>
-    <string name="click_here">Нажмите сюда!</string>
-    <string name="manual_tip">Есть свой собственный NextGIS Web?</string>
-    <string name="nextgis_com">Обратно к входу через nextgis.com</string>
-    <string name="edit_by_touch">Дополнить геометрию касанием</string>
-    <string name="title_edit_by_touch">Изменить касанием</string>
-    <string name="auto">Авто</string>
-    <string name="manual">Вручную</string>
-    <string name="skip">Пропустить</string>
-    <string name="sync_dialog_message">Какой вариант вы хотите использовать для слоя? Эту опцию можно поменять в настройках слоя или в аккаунтах NextGIS Web.</string>
-    <string name="sync_dialog_title">Синхронизировать с NextGIS Web?</string>
-    <string name="import_">Импорт</string>
-    <string name="new_group">Создать новую группу</string>
-    <string name="new_group_name">Имя группы:</string>
-    <string name="message_group_created">Группа создана</string>
-    <string name="commercial">Доступно в коммерческой версии</string>
-    <string name="clear_layer">Удалить все объекты</string>
-    <string name="are_you_sure">Вы уверены?</string>
-    <string name="delete_features">Все объекты будут удалены.</string>
-    <string name="sync_direction">Направление синхронизации</string>
-    <string name="to_ngw">Только на сервер</string>
-    <string name="from_ngw">Только с сервера</string>
-    <string name="both_directions">В обе стороны</string>
-    <string name="ngid_settings">Учетная запись</string>
+    <string name="sync_disable">Ҳамоҳангсозиро ғайрифаъол кунед</string>
+    <string name="sync_enable">Ҳамоҳангсозиро фаъол созед</string>
+    <string name="ngw_account">Ҳисоб - %1$s</string>
+    <string name="menu_send_to_ngw">Ба NextGIS пешниҳод кунед</string>
+    <string name="sync_disabled">Ҳамоҳангсозӣ ғайрифаъол</string>
+    <string name="sync_enable_error">Ҳангоми ба кор даровардани синхронизатсия</string>
+    <string name="sync_enabled">Синхронизатсия фаъол аст</string>
+    <string name="click_here">Ин ҷоро пахш кунед!</string>
+    <string name="manual_tip">Веби NextGIS-и худро доред?</string>
+    <string name="nextgis_com">Вуруд ба воситаи nextgis.com</string>
+    <string name="edit_by_touch">Воридот ба геометрия </string>
+    <string name="title_edit_by_touch">Тағйир ҳангоми пахш</string>
+    <string name="auto">Худкор</string>
+    <string name="manual">Дастӣ</string>
+    <string name="skip">Гузаштан</string>
+    <string name="sync_dialog_message">Кадом хосиятро шумо барои қабат истифода бурдан мехоҳед? Ин интихобро дар танзимоти қабат ё дар ҳисобҳои веби NextGIS тағир додан мумкин аст.</string>
+    <string name="sync_dialog_title">Ҳамоҳангсозӣ бо NextGIS Web?</string>
+    <string name="import_">Воридот</string>
+    <string name="new_group">Эҷоди гурӯҳи нав</string>
+    <string name="new_group_name">Номи гурӯҳ:</string>
+    <string name="message_group_created">Гурӯҳ эҷод шуд</string>
+    <string name="commercial">Дар нусхаи тиҷоратӣ дастрас аст</string>
+    <string name="clear_layer">Ҳама объектҳоро нест кардан</string>
+    <string name="are_you_sure">Шумо мутмаъин ҳастед?</string>
+    <string name="delete_features">Ҳама объектҳо нест карда мешаванд</string>
+    <string name="sync_direction">Самти ҳамоҳангсозӣ</string>
+    <string name="to_ngw">Танҳо ба сервер</string>
+    <string name="from_ngw">Танҳо аз сервер</string>
+    <string name="both_directions">Аз ҳарду самт</string>
+    <string name="ngid_settings">Ҳисоби коргар</string>
     <string name="ngid_email">E-mail</string>
-    <string name="ngid_first_name">Имя</string>
-    <string name="ngid_last_name">Фамилия</string>
-    <string name="ngid_username">Имя пользователя</string>
+    <string name="ngid_first_name">Ном</string>
+    <string name="ngid_last_name">Насаб</string>
+    <string name="ngid_username">Номи истифодабаранда</string>
     <string name="ngid_my">my.nextgis.com</string>
-    <string name="not_set">Не задано</string>
-    <string name="sign_out">Выйти</string>
-    <string name="ngid_account_ask">Еще нет своего аккаунта?</string>
-    <string name="sign_in_tip">для больших возможностей, синхронизации и получения обновлений</string>
-    <string name="select_row">Выберите поле</string>
-    <string name="coming_soon">Скоро будет доступно</string>
-    <string name="get_pro">Функция доступна только подписчикам. Пожалуйста, войдите или ознакомьтесь подробнее (<a href="https://nextgis.ru/pricing-base">https://nextgis.com/pricing-base</a>)</string>
-    <string name="pro_user_only">Pro функция</string>
-    <string name="small">Маленький</string>
-    <string name="medium">Средний</string>
-    <string name="big">Большой</string>
-    <string name="top">Вверху</string>
-    <string name="right_top">Справа вверху</string>
-    <string name="right">Справа</string>
-    <string name="right_bottom">Справа внизу</string>
-    <string name="bottom">Внизу</string>
-    <string name="left_bottom">Слева внизу</string>
-    <string name="left">Слева</string>
-    <string name="left_top">Слева вверху</string>
-    <string name="alignment">Расположение</string>
-    <string name="enter_signature">Введите текст</string>
-    <string name="text_color">Цвет текста</string>
-    <string name="metric">Метрическая</string>
-    <string name="imperial">Британская</string>
-    <string name="delete_confirm">Подтвердите удаление объекта.</string>
-    <string name="no_activity_found">Не найдено подходящего приложения</string>
-    <string name="fb_form">Форма</string>
-    <string name="trackpoints_stats">Всего точек: %1$d\nСинхронизировано: %2$d\Время последней точки: %3$s</string>
-    <string name="stats">Статистика</string>
-    <string name="no_permission">Нет разрешений на запись</string>
-    <string name="no_permission_granted">Не хватает разрешений</string>
-    <string name="error_file_create">Ошибка создания файла</string>
-    <string name="averaging">Усреднить</string>
-    <string name="averaging_enter_value">Введите значение (%1$d/%2$d)</string>
-    <string name="average_next">Дальше</string>
+    <string name="not_set">Таъин нашудааст</string>
+    <string name="sign_out">Баромадан</string>
+    <string name="ngid_account_ask">ЕҲоло истифода баранда нестед?</string>
+    <string name="sign_in_tip">барои хусусиятҳои бузург, ҳамоҳангсозӣ ва навсозиҳо</string>
+    <string name="select_row">Соҳаеро интихоб кунед</string>
+    <string name="coming_soon">Ба қарибӣ дастрас хоҳад шуд</string>
+    <string name="get_pro">Ин функсия танҳо барои муштариён дастрас аст. Лутфан, ворид шавед ё маълумоти бештарро хонед (<a href="https://nextgis.ru/pricing-base">https://nextgis.com/pricing-base</a>)</string>
+    <string name="pro_user_only">Функсияи Pro</string>
+    <string name="small">хурд</string>
+    <string name="medium">Миёна</string>
+    <string name="big">Калон</string>
+    <string name="top">Боло</string>
+    <string name="right_top">Рости боло</string>
+    <string name="right">Рост</string>
+    <string name="right_bottom">Рости поён</string>
+    <string name="bottom">Дар поён</string>
+    <string name="left_bottom">Поёни чап</string>
+    <string name="left">Чап</string>
+    <string name="left_top">Боло чап</string>
+    <string name="alignment">Ҷойгиршавӣ</string>
+    <string name="enter_signature">Матнро ворид кунед</string>
+    <string name="text_color">Ранги матн</string>
+    <string name="metric">Системаи метрии</string>
+    <string name="imperial">Бритониё</string>
+    <string name="delete_confirm">Тозакунии объектро тасдиқ кунед</string>
+    <string name="no_activity_found">Ягон барномаи мувофиқ ёфт нашуд</string>
+    <string name="fb_form">Шакл</string>
+    <string name="trackpoints_stats">Нуқтаҳои умумӣ: %1$d\nСинхронизатсия: %2$d\Вақти охирин: %3$s</string>
+    <string name="stats">Омор</string>
+    <string name="no_permission">Бе иҷозати навиштан</string>
+    <string name="no_permission_granted">Ҳуқуқи шумо кофӣ нест</string>
+    <string name="error_file_create">Хатоги ҳангоми эҷоди файл</string>
+    <string name="averaging">Миёна</string>
+    <string name="averaging_enter_value">Арзишро ворид кунед (%1$d/%2$d)</string>
+    <string name="average_next">Баъдан</string>
 </resources>
