--- a/src/main/res/values-tg/strings.xml
+++ b/src/main/res/values-tg/strings.xml
@@ -272,7 +272,7 @@
     <string name="new_gis">Сохтани GIS</string>
     <string name="manual_ngw">Танзисоти тақвият </string>
     <string name="instance_name">Номи GIS</string>
-    <string name="ngw_from_my_nextgis">Шумо ҳоло ҳам Web GIS-и худ надоред? Эҷод дар nextgis.com!</string>
+    <string name="ngw_from_my_nextgis">Шумо ҳоло ҳам Web GIS-и худ надоред? Эҷод дар my.nextgis.com!</string>
     <string name="guest">меҳмон</string>
     <string name="field_not_filled">Баъзе майдонҳо холӣ ҳастанд.</string>
     <string name="web_map">Харитаи веб</string>
