--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -320,7 +320,7 @@
     <string name="ngid_email">E-mail</string>
     <string name="ngid_first_name">Ім\'я</string>
     <string name="ngid_last_name">Прізвище</string>
-    <string name="ngid_my">my.nextgis.com</string>
+    <string name="ngid_my">NextGIS ID (%s)</string>
     <string name="sign_out">Вийти</string>
     <string name="not_set">Не задано</string>
     <string name="ngid_account_ask">Ще не маєте власного акаунта?</string>
@@ -356,4 +356,7 @@
     <string name="averaging">Average</string>
     <string name="averaging_enter_value">Type value (%1$d/%2$d)</string>
     <string name="average_next">Continue</string>
+    <string name="ngid_onpremise">Connect to on-premise server</string>
+    <string name="ngid_server">Current server is %s</string>
+    <string name="ngid_type_url">Type URL</string>
 </resources>
