--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -359,7 +359,7 @@
     <string name="averaging">Усреднить</string>
     <string name="averaging_enter_value">Введите значение (%1$d/%2$d)</string>
     <string name="average_next">Дальше</string>
-    <string name="ngid_onpremise">Подключиться к серверу организации</string>
-    <string name="ngid_server">Текущий сервер %s</string>
+    <string name="ngid_onpremise">Изменить сервер авторизации</string>
+    <string name="ngid_server">Текущий: %s</string>
     <string name="ngid_type_url">Введите URL</string>
 </resources>
