--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -362,4 +362,5 @@
     <string name="ngid_type_url">Type URL</string>
     <string name="user_name_ngw">Web GIS login</string>
     <string name="user_name_ngid">Login or E-mail</string>
+    <string name="get_file_manually">No installed apps found to open file %1$s. You can pick it manually at path:\n%2$s</string>
 </resources>
