--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -364,4 +364,5 @@
     <string name="ngid_onpremise">Change authorization server</string>
     <string name="ngid_server">Currently used: %s</string>
     <string name="ngid_type_url">Type URL</string>
+    <string name="get_file_manually">No installed apps found to open file %1$s. You can pick it manually at path:\n%2$s</string>
 </resources>
