--- a/src/main/res/values-tg/strings.xml
+++ b/src/main/res/values-tg/strings.xml
@@ -3,7 +3,7 @@
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2020 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2020-2021 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -210,6 +210,8 @@
     <string name="form_tiles_list">Сохтани рӯйхати сафҳаҳо</string>
     <string name="tiles_count">%1$s сафолҳои</string>
     <string name="counting">Ҳисоб кардан …</string>
+    <string name="track_start">Start new track</string>
+    <string name="track_stop">Stop track</string>
     <string name="tracks_running">Трек сабт карда шуд</string>
     <string name="tracks_title">Роҳрав %s</string>
     <string name="walkedit_title">Воридкунӣ, гузаштан аз %s</string>
@@ -363,4 +365,7 @@
     <string name="get_file_manually">No installed apps found to open file %1$s. You can pick it manually at path:\n%2$s</string>
     <string name="not_enough_space">Not enough space</string>
     <string name="free_space_message">You need at least %1$s free, but you have %2$s only.</string>
+    <string name="background_location">Background location usage</string>
+    <string name="background_location_message">You need to provide background geolocation permission for NextGIS app to collect tracks continuously. Otherwise the track will be collected only when the app in foreground. Please select \'%s\'.</string>
+    <string name="background_location_always">Allow all the time</string>
 </resources>
