--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -4,7 +4,7 @@
   ~ Author:   Maxim Dubinin, maxim.dubinin@nextgis.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2016-2020 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016-2021 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -209,6 +209,8 @@
     <string name="form_tiles_list">Створити список тайлів</string>
     <string name="tiles_count">%1$s тайлів</string>
     <string name="counting">Триває обчислення…</string>
+    <string name="track_start">Почати запис нового треку</string>
+    <string name="track_stop">Завершити запис треку</string>
     <string name="tracks_running">Трек записується</string>
     <string name="tracks_title">Трек %s</string>
     <string name="walkedit_title">Редагування обходом %s</string>
@@ -364,4 +366,7 @@
     <string name="get_file_manually">No installed apps found to open file %1$s. You can pick it manually at path:\n%2$s</string>
     <string name="not_enough_space">Not enough space</string>
     <string name="free_space_message">You need at least %1$s free, but you have %2$s only.</string>
+    <string name="background_location">Background location usage</string>
+    <string name="background_location_message">You need to provide background geolocation permission for NextGIS app to collect tracks continuously. Otherwise the track will be collected only when the app in foreground. Please select \'%s\'.</string>
+    <string name="background_location_always">Allow all the time</string>
 </resources>
